# routes/index.js
@@ -3,14 +3,7 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/projects', require('./projects'));
-// router.use(
-//     '/',
-//     (docData = (req, res) => {
-//         let docData = {
-//         documentationURL: 'https:nathanbirch.github.io/nathan-byui-api-docs',
-//     };
-//     res.send(docData);
-//     })
-// );
+router.use('/trips', require('./trips'));
+
 
 module.exports = router;
